# travel-agent

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  QUICKSTART.md  README.md  STRUCTURE.md  app.py  auth.py  config.py  logger_config.py  orchestrator.py  pyproject.toml  requirements.txt  setup.py  setup.sh
agents/: __init__.py  base_agent.py  executor_agent.py  planner_agent.py  researcher_agent.py  validator_agent.py
config/: .gitkeep
docs/diagrams/: README.md  agent-execution-flow.mmd  authentication-data-flow.mmd  system-architecture.mmd  workflow-sequence.mmd  workflow-state-flow.mmd
pages/: about.py  login.py  operation_logs.py  signup.py
src/travel_agent/: __init__.py
src/travel_agent/agents/: __init__.py  base_agent.py  executor_agent.py  planner_agent.py  researcher_agent.py  validator_agent.py
src/travel_agent/core/: __init__.py  auth.py  config.py  database.py  logger_config.py  orchestrator.py
src/travel_agent/utils/: __init__.py  pdf_generator.py
tests/: __init__.py
